--- a/app/views/site/results.html.haml
+++ b/app/views/site/results.html.haml
@@ -1,12 +1,12 @@
 - @section = "search"
 - @subsection = ""
-- @page_title = "Search results for #{@term}"
+- @page_title = "Search results for #{h(@term)}"
 
 - content_for :sidebar do
   = render 'shared/related'
 
 %div#main
-  %h1=raw "Search results for <strong>#{@term}</strong>"
+  %h1=raw "Search results for <strong>#{h(@term)}</strong>"
 
   - if @top.size > 0
     %div.callout.top-matches
